--- a/ConfigurationFiles/Elements.cfg
+++ b/ConfigurationFiles/Elements.cfg
@@ -1,5 +1,41 @@
-# xpath or css to be added here
-
 [Registration]
-Username = //button[contains(text(),"Sign In")]
-Password =
+Username = email-sign-in
+Password = password-sign-in
+Sign-in = //button[contains(text(),'Sign In')]
+
+[Dashboard]
+Create-project = //button[contains(text(),'Create Project')]
+Pre-Requisite-Continue = /html/body/div[2]/div/div/div[2]/div/div/div[1]/a
+
+[General Details]
+Project-Name = //*[@id="fullName-sign-up"]
+Description = //*[@id="issue-description"]
+Manual-Checkbox = //*[@id="checkbox-group-validation"]/label/div/div
+Next = //*[@id="root"]/div/div/page/div/div/div/div/div[2]/div/footer/button
+
+[Source Details]
+Source-Name = //*[@id="src-name"]
+Host-Name = //*[@id="src-host_name"]
+Credentials = //*[@id="simple-wizard-form"]/div/div[3]/div/div/input
+Password = //*[@id="password-sign-up-simple"]
+Upload-File = //*[@id="source_env_discovery_file"]
+Next = //*[@id="root"]/div/div/page/div/div/div/div/div[2]/div/footer/button
+
+[Destination Details]
+Target-Name = //*[@id="target-name"]
+Target-Host-Name = //*[@id="target-host_name"]
+Target-Username = //*[@id="simple-wizard-form"]/div/div[3]/div/div/input
+Target-Password = //*[@id="password-sign-up-simple"]
+Create = //*[@id="root"]/div/div/page/div/div/div/div/div[2]/div/footer/button
+
+[Discovery]
+Initiate Discovery = //*[@id="root"]/div/div/div/div[2]/header/div/div[4]/div/button[1]
+Pre-requisite Check = //*[@id="root"]/div/div/div/div[2]/header/div/div[4]/div/button[1][contains(text(),"Pre-requisite check")]
+Initiate Planning = //*[@id="root"]/div/div/div/div/div[1]/div[3]/button
+Create Wave = //*[@id="root"]/div/div/div/div/header/div/div[4]/div/button
+
+[Wave Plan]
+Wave Name = //*[@id="wavename"]
+Create-button = /html/body/div[2]/div/div/div[2]/div/div/div[1]/button
+VMname-box =
+VMnetwork =
